app/javascript/flavours/aether/styles/components/status.scss
/* ... */
.notification-favourite {
  .status.status-direct {
    background: transparent;

    .icon-button.disabled {
      color: lighten($action-button-color, 13%);
    }
  }
}

.status__relative-time {
  display: inline-block;
  color: var(--ui-font-dimmer-color);
  font-size: 0.9rem;
  text-align: end;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.status__display-name {
  color: var(--ui-font-dimmer-color);
  overflow: hidden;
}

.status__info__account .status__display-name {
  display: block;
  max-width: 100%;
  margin-top: -2px;

  span.display-name {
    padding-top: 2px;
  }
}

.status__info {
  display: flex;
  justify-content: space-between;
  font-size: 1rem;

  > span {
    text-overflow: ellipsis;
    overflow: hidden;
  }

  .notification__message > span {
    word-wrap: break-word;
  }
}

.status__info__icons {
  display: flex;
  align-items: center;
  height: 1em;
  color: $action-button-color;
  font-size: 0.9rem;

  .status__media-icon,
  .status__visibility-icon,
  .status__reply-icon,
  .text-icon {
    padding-inline-start: 2px;
    padding-inline-end: 2px;
  }

  .status__collapse-button {
    margin-right: 4px;
  }

  .status__collapse-button.active > .fa-angle-double-up {
    transform: rotate(-180deg);
  }
}

.no-reduce-motion .status__collapse-button {
  &.activate {
    & > .fa-angle-double-up {
      animation: spring-flip-in 1s linear;
    }
  }

  &.deactivate {
    & > .fa-angle-double-up {
      animation: spring-flip-out 1s linear;
    }
  }
}

.status__info__account {
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

.status-check-box__status {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 0 10px;

  .detailed-status__display-name {
    color: var(--ui-inverted-font-color);

    span {
      display: inline;
    }

    &:hover strong {
      text-decoration: none;
    }
  }

  .media-gallery,
  .audio-player,
  .video-player {
    margin-top: 15px;
    max-width: 250px;
  }

  .status__content {
    padding: 0;
    white-space: normal;
  }

  .media-gallery__item-thumbnail {
    cursor: default;
  }
}

.status__prepend {
  margin-top: -2px;
  margin-bottom: 8px;
  margin-inline-start: 58px;
  color: var(--ui-font-dimmer-color);
  font-size: 14px;
  position: relative;

  .status__display-name .emojione {
    width: 16px;
    height: 16px;
    margin: 0;
  }

  .status__display-name strong {
    color: var(--ui-font-dimmer-color);
  }

  > span {
    display: block;
    overflow: hidden;
    text-overflow: ellipsis;
  }
}

.status__action-bar {
  justify-content: space-between;
  align-items: center;
  display: flex;
  gap: 18px;
  margin-top: 16px !important;
  padding: 0 20px;
}

.status__action-bar-button {
  margin-inline-end: 18px;

  &.icon-button--with-counter {
    margin-inline-end: 14px;
  }
}

.detailed-status__action-bar,
.status__action-bar {
  .icon-button {
    background-color: transparent;
  }

  .icon-button {
    color: transparent;
    -webkit-text-stroke: var(--ui-highlight-color) 2px;
    transition:
      0.2s color,
      0.2s -webkit-text-stroke;

    &:hover {
      -webkit-text-stroke: var(--ui-font-color) 2px;
    }
  }
}

.status__action-bar-dropdown {
  height: 23.15px;
  width: 23.15px;
}

.status__action-bar-spacer {
  flex-grow: 1;
}

.detailed-status__action-bar-dropdown {
  flex: 1 1 auto;
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
}

.detailed-status {
  background: var(--ui-body-color);
  padding: 14px 10px;

  &--flex {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: flex-start;

    .status__content,
    .detailed-status__meta {
      flex: 100%;
    }
  }

  .status__content {
    font-size: 1rem;
    line-height: 1.3rem;

    .emojione {
      width: 1rem;
      height: 1rem;
      margin: -1px 0 0;
    }
  }

  .video-player,
  .audio-player {
    margin-top: 8px;
  }

  .status__content__spoiler {
    cursor: pointer;

    &.status__content__spoiler--visible {
      cursor: initial;
    }
  }
}

.detailed-status__meta {
  margin-top: 15px;
  color: var(--ui-font-dimmer-color);
  font-size: 0.9rem;
  line-height: 0.9rem;
}

.detailed-status__action-bar {
  background: var(--ui-body-color);
  display: flex;
  flex-direction: row;
  padding: 10px 0;
}

.detailed-status__link {
  color: inherit;
  text-decoration: none;
}

.detailed-status__favorites,
.detailed-status__reblogs {
  display: inline-block;
  font-weight: 500;
  font-size: 12px;
  line-height: 17px;
  margin-inline-start: 6px;
}

.status__display-name,
.status__relative-time,
.detailed-status__display-name,
.detailed-status__datetime,
.detailed-status__application,
.account__display-name {
  text-decoration: none;
}

.status__display-name,
.account__display-name {
  strong {
    color: var(--ui-font-color);
  }
}

.muted {
  .emojione {
    opacity: 0.5;
  }
}

a.status__display-name,
.reply-indicator__display-name,
.detailed-status__display-name,
.account__display-name {
  &:hover strong {
    text-decoration: underline;
  }
}

.account__display-name strong {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.detailed-status__application,
.detailed-status__datetime {
  color: inherit;
}

.detailed-status__display-name {
  color: var(--ui-font-secondary-color);
  display: block;
  line-height: 24px;
  margin-bottom: 15px;
  overflow: hidden;

  strong,
  span {
    display: block;
    text-overflow: ellipsis;
    overflow: hidden;
  }

  strong {
    font-size: 16px;
    color: var(--ui-font-color);
  }
}

.detailed-status__display-avatar {
  float: left;
  margin-inline-end: 10px;
}

.status__avatar {
  flex: none;
  margin-inline-end: 10px;
  height: var(--ui-avatar-status-size);
  width: var(--ui-avatar-status-size);
}
/* ... */

